<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_first_1"
    tools:context=".PupaActivity">

<LinearLayout
    android:layout_width="wrap_content"
    android:orientation="vertical"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/btn_play_as"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="100dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_sing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/rubik_mono_one_regular"
        android:text="@string/sing_up_to"
        android:textColor="@color/white"
        android:textSize="32sp"
        />

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/rubik_mono_one_regular"
        android:text="@string/save_your"
        android:textColor="@color/white"
        android:textSize="32sp"
      />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/rubik_mono_one_regular"
        android:text="@string/results"
        android:textColor="@color/white"
        android:textSize="32sp"
      />

</LinearLayout>

        <Button
        android:id="@+id/btn_play_as"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/rubik_mono_one_regular"
        android:padding="24dp"
        android:text="@string/play_as_anonymous"
        android:textSize="16sp"
        android:shadowRadius="10"
        android:shadowColor="@color/black"
        android:textColor="@color/white"
        android:background="@drawable/buton_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_sing_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/rubik_mono_one_regular"
        android:padding="24dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/buton_style"
        android:text="@string/sing_up_via_email"
        android:textSize="16sp"
        android:shadowColor="@color/black"
        android:textColor="@color/white"
        android:shadowRadius="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_play_as" />

</androidx.constraintlayout.widget.ConstraintLayout>