<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_first_1"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_exit"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/buton_style"
        app:layout_constraintBottom_toTopOf="@+id/btn_game1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/nazad"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_exit"
        app:layout_constraintEnd_toEndOf="@id/btn_exit"
        app:layout_constraintStart_toStartOf="@id/btn_exit"
        app:layout_constraintTop_toTopOf="@id/btn_exit" />


    <Button
        android:id="@+id/btn_game1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/buton_style"
        android:fontFamily="@font/rubik_mono_one_regular"
        android:paddingTop="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/scales"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_game1"
        app:layout_constraintEnd_toEndOf="@id/btn_game1"
        app:layout_constraintTop_toTopOf="@id/btn_game1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:elevation="10dp"
        android:fontFamily="@font/rubik_mono_one_regular"
        android:text="@string/game_1"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_game1"
        app:layout_constraintStart_toStartOf="@id/btn_game1"
        app:layout_constraintTop_toTopOf="@id/btn_game1" />

    <Button
        android:id="@+id/btn_game2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/buton_style"
        android:fontFamily="@font/rubik_mono_one_regular"
        android:paddingTop="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_game1" />

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/ic_drum"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_game2"
        app:layout_constraintEnd_toEndOf="@id/btn_game2"
        app:layout_constraintTop_toTopOf="@id/btn_game2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:elevation="10dp"
        android:fontFamily="@font/rubik_mono_one_regular"
        android:text="@string/game_2"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_game2"
        app:layout_constraintStart_toStartOf="@id/btn_game2"
        app:layout_constraintTop_toTopOf="@id/btn_game2" />

    <TextView
        android:id="@+id/privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/rubik_mono_one_regular"
        android:text="@string/privacy"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="154dp"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@id/privacy"
        app:layout_constraintStart_toStartOf="@id/privacy"
        app:layout_constraintTop_toBottomOf="@id/privacy" />


    <Button
        android:layout_width="170dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/ic_present"
        app:layout_constraintBottom_toTopOf="@id/privacy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_game2" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="170dp"
        android:layout_height="100dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_settings"
        app:layout_constraintBottom_toTopOf="@id/privacy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_game2" />
</androidx.constraintlayout.widget.ConstraintLayout>